antlr4-runtime/CAAParser.py
# Generated from /home/diego/Dropbox/pyaac/antlr4-runtime/CAA.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CAAParser ( Parser ):

    grammarFileName = "CAA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'message('", "'(to'", "'reactive'", 
                     "'instinctive'", "'cognitive'", "'(from'", "'(body'", 
                     "'~'", "'logic('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LABEL", "INNERSEP", "OUTERSEP" ]

    RULE_actions = 0
    RULE_action = 1
    RULE_consequence = 2
    RULE_message = 3
    RULE_messageto = 4
    RULE_messagefrom = 5
    RULE_messagebody = 6
    RULE_rhsconjunction = 7
    RULE_conjunction = 8
    RULE_logic = 9
    RULE_symbol = 10

    ruleNames =  [ "actions", "action", "consequence", "message", "messageto", 
                   "messagefrom", "messagebody", "rhsconjunction", "conjunction", 
                   "logic", "symbol" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    LABEL=12
    INNERSEP=13
    OUTERSEP=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ActionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CAAParser.EOF, 0)

        def OUTERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.OUTERSEP)
            else:
                return self.getToken(CAAParser.OUTERSEP, i)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.ActionContext)
            else:
                return self.getTypedRuleContext(CAAParser.ActionContext,i)


        def getRuleIndex(self):
            return CAAParser.RULE_actions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActions" ):
                listener.enterActions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActions" ):
                listener.exitActions(self)




    def actions(self):

        localctx = CAAParser.ActionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_actions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 22
                self.match(CAAParser.OUTERSEP)


            self.state = 25
            self.match(CAAParser.T__0)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CAAParser.OUTERSEP:
                    self.state = 26
                    self.match(CAAParser.OUTERSEP)


                self.state = 29
                self.action()
                self.state = 31
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 30
                    self.match(CAAParser.OUTERSEP)


                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CAAParser.T__0 or _la==CAAParser.OUTERSEP):
                    break

            self.state = 37
            self.match(CAAParser.T__1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 38
                self.match(CAAParser.OUTERSEP)


            self.state = 41
            self.match(CAAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(CAAParser.LABEL, 0)

        def conjunction(self):
            return self.getTypedRuleContext(CAAParser.ConjunctionContext,0)


        def consequence(self):
            return self.getTypedRuleContext(CAAParser.ConsequenceContext,0)


        def OUTERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.OUTERSEP)
            else:
                return self.getToken(CAAParser.OUTERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = CAAParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(CAAParser.T__0)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 44
                self.match(CAAParser.OUTERSEP)


            self.state = 47
            self.match(CAAParser.LABEL)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 48
                self.match(CAAParser.OUTERSEP)


            self.state = 51
            self.conjunction()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 52
                self.match(CAAParser.OUTERSEP)


            self.state = 55
            self.consequence()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 56
                self.match(CAAParser.OUTERSEP)


            self.state = 59
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConsequenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.OUTERSEP)
            else:
                return self.getToken(CAAParser.OUTERSEP, i)

        def rhsconjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.RhsconjunctionContext)
            else:
                return self.getTypedRuleContext(CAAParser.RhsconjunctionContext,i)


        def message(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.MessageContext)
            else:
                return self.getTypedRuleContext(CAAParser.MessageContext,i)


        def getRuleIndex(self):
            return CAAParser.RULE_consequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsequence" ):
                listener.enterConsequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsequence" ):
                listener.exitConsequence(self)




    def consequence(self):

        localctx = CAAParser.ConsequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_consequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(CAAParser.T__0)
            self.state = 67 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 62
                    self.match(CAAParser.OUTERSEP)
                    self.state = 65
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CAAParser.T__0, CAAParser.T__9]:
                        self.state = 63
                        self.rhsconjunction()
                        pass
                    elif token in [CAAParser.T__2]:
                        self.state = 64
                        self.message()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 69 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 71
                self.match(CAAParser.OUTERSEP)


            self.state = 74
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def messagefrom(self):
            return self.getTypedRuleContext(CAAParser.MessagefromContext,0)


        def messageto(self):
            return self.getTypedRuleContext(CAAParser.MessagetoContext,0)


        def messagebody(self):
            return self.getTypedRuleContext(CAAParser.MessagebodyContext,0)


        def OUTERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.OUTERSEP)
            else:
                return self.getToken(CAAParser.OUTERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_message

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessage" ):
                listener.enterMessage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessage" ):
                listener.exitMessage(self)




    def message(self):

        localctx = CAAParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(CAAParser.T__2)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 77
                self.match(CAAParser.OUTERSEP)


            self.state = 80
            self.messagefrom()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 81
                self.match(CAAParser.OUTERSEP)


            self.state = 84
            self.messageto()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 85
                self.match(CAAParser.OUTERSEP)


            self.state = 88
            self.messagebody()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 89
                self.match(CAAParser.OUTERSEP)


            self.state = 92
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessagetoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INNERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.INNERSEP)
            else:
                return self.getToken(CAAParser.INNERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_messageto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessageto" ):
                listener.enterMessageto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessageto" ):
                listener.exitMessageto(self)




    def messageto(self):

        localctx = CAAParser.MessagetoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_messageto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(CAAParser.T__3)
            self.state = 95
            self.match(CAAParser.INNERSEP)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CAAParser.T__4) | (1 << CAAParser.T__5) | (1 << CAAParser.T__6))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.INNERSEP:
                self.state = 97
                self.match(CAAParser.INNERSEP)


            self.state = 100
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessagefromContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INNERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.INNERSEP)
            else:
                return self.getToken(CAAParser.INNERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_messagefrom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagefrom" ):
                listener.enterMessagefrom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagefrom" ):
                listener.exitMessagefrom(self)




    def messagefrom(self):

        localctx = CAAParser.MessagefromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_messagefrom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CAAParser.T__7)
            self.state = 103
            self.match(CAAParser.INNERSEP)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CAAParser.T__4) | (1 << CAAParser.T__5) | (1 << CAAParser.T__6))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.INNERSEP:
                self.state = 105
                self.match(CAAParser.INNERSEP)


            self.state = 108
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessagebodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INNERSEP(self):
            return self.getToken(CAAParser.INNERSEP, 0)

        def rhsconjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.RhsconjunctionContext)
            else:
                return self.getTypedRuleContext(CAAParser.RhsconjunctionContext,i)


        def OUTERSEP(self):
            return self.getToken(CAAParser.OUTERSEP, 0)

        def getRuleIndex(self):
            return CAAParser.RULE_messagebody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagebody" ):
                listener.enterMessagebody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagebody" ):
                listener.exitMessagebody(self)




    def messagebody(self):

        localctx = CAAParser.MessagebodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_messagebody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(CAAParser.T__8)
            self.state = 111
            self.match(CAAParser.INNERSEP)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.rhsconjunction()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CAAParser.T__0 or _la==CAAParser.T__9):
                    break

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 117
                self.match(CAAParser.OUTERSEP)


            self.state = 120
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RhsconjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunction(self):
            return self.getTypedRuleContext(CAAParser.ConjunctionContext,0)


        def getRuleIndex(self):
            return CAAParser.RULE_rhsconjunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRhsconjunction" ):
                listener.enterRhsconjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRhsconjunction" ):
                listener.exitRhsconjunction(self)




    def rhsconjunction(self):

        localctx = CAAParser.RhsconjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rhsconjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.T__9:
                self.state = 122
                self.match(CAAParser.T__9)


            self.state = 125
            self.conjunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.LogicContext)
            else:
                return self.getTypedRuleContext(CAAParser.LogicContext,i)


        def OUTERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.OUTERSEP)
            else:
                return self.getToken(CAAParser.OUTERSEP, i)

        def INNERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.INNERSEP)
            else:
                return self.getToken(CAAParser.INNERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_conjunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunction" ):
                listener.enterConjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunction" ):
                listener.exitConjunction(self)




    def conjunction(self):

        localctx = CAAParser.ConjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(CAAParser.T__0)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 128
                self.match(CAAParser.OUTERSEP)


            self.state = 131
            self.logic()
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CAAParser.INNERSEP or _la==CAAParser.OUTERSEP:
                        self.state = 132
                        _la = self._input.LA(1)
                        if not(_la==CAAParser.INNERSEP or _la==CAAParser.OUTERSEP):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()


                    self.state = 135
                    self.logic() 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.OUTERSEP:
                self.state = 141
                self.match(CAAParser.OUTERSEP)


            self.state = 144
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CAAParser.SymbolContext)
            else:
                return self.getTypedRuleContext(CAAParser.SymbolContext,i)


        def INNERSEP(self, i:int=None):
            if i is None:
                return self.getTokens(CAAParser.INNERSEP)
            else:
                return self.getToken(CAAParser.INNERSEP, i)

        def getRuleIndex(self):
            return CAAParser.RULE_logic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic" ):
                listener.enterLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic" ):
                listener.exitLogic(self)




    def logic(self):

        localctx = CAAParser.LogicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(CAAParser.T__10)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.INNERSEP:
                self.state = 147
                self.match(CAAParser.INNERSEP)


            self.state = 150
            self.symbol()
            self.state = 151
            self.match(CAAParser.INNERSEP)
            self.state = 152
            self.symbol()
            self.state = 153
            self.match(CAAParser.INNERSEP)
            self.state = 154
            self.symbol()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CAAParser.INNERSEP:
                self.state = 155
                self.match(CAAParser.INNERSEP)


            self.state = 158
            self.match(CAAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(CAAParser.LABEL, 0)

        def getRuleIndex(self):
            return CAAParser.RULE_symbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbol" ):
                listener.enterSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbol" ):
                listener.exitSymbol(self)




    def symbol(self):

        localctx = CAAParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_symbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(CAAParser.LABEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





